# 3D-structural-inspection-using-P3DX-and-Cyton-gamma-1500

./: README.md
Walden95-pioneer-3dx-and-cyton-gamma-1500-mobile-manipulator-50bd44e00ebf/: README.md
Walden95-pioneer-3dx-and-cyton-gamma-1500-mobile-manipulator-50bd44e00ebf/p3dx_robot/: CMakeLists.txt
cyton_gamma_1500/: dependancies
cyton_gamma_1500/cyton_1500_controllers/: README.md
pioneer-3dx-and-cyton-gamma-1500-mobile-manipulator/base-arm_fusion/p3dx_cyton1500_fusion/: CMakeLists.txt  package.xml
pioneer-3dx-and-cyton-gamma-1500-mobile-manipulator/base-arm_fusion/p3dx_cyton1500_fusion/launch/: fusion_gazebo.launch  robots_fusion.launch  world_demo.launch
pioneer-3dx-and-cyton-gamma-1500-mobile-manipulator/base-arm_fusion/p3dx_cyton1500_fusion/meshes/QS18VP6LLP_laser/: QS18VP6LLP_laser2.dae  meshLab.mlp  model.config  qs18.dae
pioneer-3dx-and-cyton-gamma-1500-mobile-manipulator/base-arm_fusion/p3dx_cyton1500_fusion/world/: fusion_demo.world
pioneer-3dx-and-cyton-gamma-1500-mobile-manipulator/base-arm_fusion/p3dx_cyton1500_fusion/xacro/: QS18VP6LLP_laser.xacro  cyton1500_gripper.xacro  p3dx_cyton1500_fusion.xacro
traj/: CMakeLists.txt  baseCircle.py  baseStop.py  botCurrentPose.py  cleanWindow.py  generateMap.py  generateMap2.py  generateMap3.py  getch.py  keyBoard.py  laserData.py  laserToMapOnly.py  laserWithXYZ.py  lineXZ2.py  lineXZAxis.py  lineZAxis.py  manipBasic.py  manipCurrentPose.py  manipp.py  motionWithLaser.py  package.xml  quaternionEuler.py  rvizLineStrip.py  rvizPoint.py  setManipPose.py  sphereRviz.py  transformMatrix.py
(+50 files in other folders)
