<?xml version="1.0"?>
<package>
  <name>p3dx_cyton1500_fusion</name>
  <version>1.0.0</version>
  <description>
  This package was create by Ryan Walsh
  </description>
  <maintainer email="ryan.w.walsh@marquette.edu">Ryan Walsh</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
